# Necromancer

./: Cargo.toml  LICENCE  README.md
examples/: Fibonacci.z  Hello Underworld.z  Hello World.z
src/: entity.rs  lib.rs  main.rs  necro.rs  parse.rs  recipe.rs  schedule.rs  scroll.rs  statement.rs  summoner.rs  task.rs  value.rs
src/necro/: mod.rs  state.rs  summon.rs
src/parse/: mod.rs  tests.rs
src/recipe/: creature.rs  expression.rs  statement.rs  task.rs
src/scroll/: creature.rs  entity.rs  expression.rs  mod.rs  statement.rs  task.rs
