[package]
authors = ["Marvin Gazibarić <m.gazibaric@live.de>"]
edition = "2021"
license = "EUPL-1.2"
name = "necromancer"
publish = false
readme = "README.md"
repository = "https://github.com/Link87/Necromancer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
dashmap = "4.0.2"
either = "1.6.1"
env_logger = "0.9.0"
fastrand = "1.5.0"
futures = "0.3.18"
indexmap = "1.7.0"
lazy_static = "1.4.0"
log = "0.4.14"
nom = "7.1.0"
tokio = {version = "1.4.0", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"]}
