[package]
authors = ["Marvin Gazibarić <m.gazibaric@live.de>"]
edition = "2021"
license = "EUPL-1.2"
name = "necromancer"
publish = false
readme = "README.md"
repository = "https://github.com/Link87/Necromancer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "summon"
path = "src/main.rs"

[dependencies]
async-recursion = "1.0"
clap = {version = "4.5", features = ["cargo"]}
dashmap = "5.5"
either = "1.10"
env_logger = "0.11"
fastrand = "2.0"
futures = "0.3"
indexmap = "2.2"
log = "0.4"
nom = "7.1"
smol_str = "0.2"
thiserror = "1.0"
tokio = {version = "1.36", features = ["macros", "rt-multi-thread", "sync", "time"]}
zalgo = "0.2"

[profile.release]
codegen-units = 1
strip-debuginfo = true
lto = true
